--- a/server/djangoapp/templates/djangoapp/index.html
+++ b/server/djangoapp/templates/djangoapp/index.html
@@ -13,15 +13,16 @@
 
 </head>
 
+<body>
 <nav class="navbar navbar-light bg-light">
     <div class="container-fluid">
       <div class="navbar-header">
         <a class="navbar-brand" href="#">Best Cars</a>
       </div>
       <ul class="nav navbar-nav navbar-right">
-        <li class="active"><a href="#">Home</a></li>
-        <li><a href="about">About Us</a></li>
-        <li><a href="contact">Contact Us</a></li>
+        <li class="active"><a href="/djangoapp">Home</a></li>
+        <li><a href="/djangoapp/about">About Us</a></li>
+        <li><a href="/djangoapp/contact">Contact Us</a></li>
         {% if user.is_authenticated %}
         <li>
              <a class="btn btn-link" href="#">{{ user.first_name }}({{ user.username }})</a>
@@ -46,13 +47,13 @@
     </div>
   </nav>
 
-    <body>
+    
     <!-- Remove this line the first time you edit this file -->
      This is the index page of your Django app!
     <!--Add a nav bar here -->
 
     <!--Add a dealer table here -->
 
-    </body>
+</body>
 
 </html>
